[tool.poetry]
name = "autoagora"
version = "0.0.0"
authors = [
    "Alexis Asseman <alexis@semiotic.ai>",
    "Tomasz Kornuta <tomasz@semiotic.ai>"
]
description = "Agora model automation for The Graph indexers."
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
repository = "https://github.com/semiotic-ai/autoagora"
packages = [
    { include = "autoagora" },
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
autoagora = "autoagora.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ConfigArgParse = "^1.5.3"
graphql-core = "^3.2.0"
base58 = "^2.1.1"
aiohttp = "^3.8.1"
gql = {extras = ["aiohttp"], version = "^3.2.0"}
asyncpg = "^0.25.0"
prometheus-async = {extras = ["aiohttp"], version = "^22.1.0"}
backoff = "^2.2.1"
python-json-logger = "^2.0.4"
autoagora-agents = {git = "https://github.com/semiotic-ai/autoagora-agents.git", tag = "v1.0.1"}

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.2"
sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
pyright = "^1.1.244"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^0.17.2"
pylint = "^2.14.5"
pytest-cov = "^4.0.0"

[tool.semantic_release]
upload_to_repository = false
version_source = "tag_only"
build_command = false
upload_to_release = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--strict-markers --durations=5 -vv"
markers = [
    "unit: marks tests as unit tests",
]

[tool.pylint.typecheck]
# List of members which are set dynamically and missed by pylint inference system, and
# so shouldn't trigger E1101 when accessed. Python regular expressions are accepted.
generated-members = ["numpy.*" ,"torch.*"]

[tool.pyright]
useLibraryCodeForTypes = true
